--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
+    <color name="perpel">#e3d9b3</color>
+    <color name="per">#e0cce3</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="red">#b3cee3</color>
-    <color name="perpel">#e3d9b3</color>
-    <color name="per">#e0cce3</color>
-
+    <color name="purple">#e3d9b3</color>
+    <color name="pink">#FFC0CB</color>
+    <color name="blue">#0000FF</color>
+    <color name="light_blue">#ADD8E6</color>
+    <color name="green">#008000</color>
+    <color name="light_green">#90EE90</color>
+    <color name="yellow">#FFFF00</color>
+    <color name="orange">#FFA500</color>
+    <color name="brown">#A52A2A</color>
+    <color name="grey">#808080</color>
+    <color name="dark_grey">#A9A9A9</color>
+    <color name="cyan">#00FFFF</color>
+    <color name="magenta">#FF00FF</color>
+    <color name="lime">#00FF00</color>
+    <color name="teal">#008080</color>
+    <color name="navy">#000080</color>
+    <color name="maroon">#800000</color>
+    <color name="olive">#808000</color>
+    <color name="gold">#FFD700</color>
+    <color name="silver">#C0C0C0</color>
 </resources>
